vlib/v/checker/tests/go_expr.out
vlib/v/checker/tests/go_expr.v:2:5: error: expression in `go` must be a function call
    1 | fn main() {
    2 |     go 1
      |        ^
    3 | }
