vlib/v/checker/tests/go_expr.v
fn main() {
	go 1
}
